Se agrega texto de ayuda

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
       <span>{{cantidad}}</span>
     </h2>
   </div>
+  <p>Clic en +100 para aumentar y -100 para reducir</p>
   <div class="text-center">
     <button (click)="aumentar()" id="aumentar" type="button" class="btn btn-success">+100</button>
     <button (click)="reducir()" id="reducir" type="button" class="btn btn-danger">-100</button>
